<resources>
    <string name="app_name">NaveCure</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="place_for_a_future_landing_page">Place for a future landing page</string>
    <string name="place_for_a_future_activity">Place for a future activity</string>
    <string name="todo">TODO</string>
    <string name="navecure">NaveCure</string>
    <string name="log_in">LOG IN</string>
    <string name="not_registered_yet">Not registered yet</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="some_description">Some description</string>
    <string name="some_image">some image</string>
    <string name="take_me_to_uta">Take me to UTA</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_registered">Already registered</string>
    <string name="login_here">Login here</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="college_of_engineering_uta">College of Engineering UTA</string>
    <string name="future_home_page">Future Home Page</string>
    <string name="log_out">Log Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_me_out">Log Me Out</string>
    <string name="response">Response</string>
    <string name="send_signal">Send Signal</string>
    <string name="ping_module">Ping Module</string>
    <string name="module_response">Module Response</string>
    <string name="output_signal">output signal</string>
    <string name="test_module">Test Module</string>
    <string name="module_terminal">Module Terminal</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="enter_output_value">Enter output value...</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="disconnect_bluetooth">DISCONNECT BLUETOOTH</string>
    <string name="bluetooth_connected">Bluetooth Connected</string>
    <string name="led_off">LED OFF</string>
    <string name="led_on">LED ON</string>
    <string name="move_servo">MOVE SERVO</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="disconnect">Disconnect</string>
    <string name="off_button">Off Button</string>
    <string name="hope_you_have_a_safe_ride">Hope you have a safe ride</string>
    <string name="on_button">On Button</string>
    <string name="start_servo">Start servo</string>
    <string name="stop_servo">Stop servo</string>
    <string name="go_button">Go Button</string>
    <string name="move_servo_not_caps">Move Servo</string>
</resources>