<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/testback"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pingConnectionView"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_margin="16dp"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".controllers.LoginActivity">

        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--            android:id="@+id/popup_menu"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginLeft="320dp"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:clickable="true"-->
        <!--            android:onClick="showPopup"-->
        <!--            app:backgroundTint="#43D3AC"-->
        <!--            app:fabSize="normal"-->
        <!--            app:srcCompat="@drawable/hamburger" />-->


        <!-- <EditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="0 or 1"
            android:hint="@string/enter_output_value"
            android:inputType="text"
            android:minHeight="48dp"
            android:outlineSpotShadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" /> -->

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:text="Please Have a Safe ride"
            android:textAlignment="center"
            android:textColor="#F6F6F6"
            android:textSize="15sp" />

        <ListView
            android:id="@+id/blueToothDeviceList"
            android:layout_width="match_parent"
            android:layout_height="64dp"

            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white"
            android:visibility="visible" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/driverstatus"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:srcCompat="@drawable/warn" />

        <TextView
            android:id="@+id/driverText"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:fontFamily="sans-serif-medium"
            android:text="Please setup camera to monitor the driver!"
            android:textAlignment="center"
            android:textColor="#F6F4F4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="139dp">

            <ImageButton
                android:id="@+id/disconnectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginBottom="22dp"
                android:background="@null"
                android:contentDescription="@string/action_sign_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/greyish" />

            <ImageView
                android:id="@+id/bluetoothIcon"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:layout_marginStart="64dp"
                android:layout_marginBottom="84dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />

            <TextView
                android:id="@+id/bluetoothText"
                android:layout_width="79dp"
                android:layout_height="22dp"
                android:layout_marginStart="59dp"
                android:layout_marginBottom="50dp"
                android:text="@string/bluetooth"
                android:textAlignment="center"
                android:textColor="#ECEFEC"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/disconnectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="58dp"
                android:layout_marginBottom="25dp"
                android:text="@string/disconnect"
                android:textAlignment="center"
                android:textColor="#F87B7B"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="132dp"
                android:layout_height="87dp"
                android:layout_marginEnd="39dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/speed" />

            <TextView
                android:id="@+id/tv_mph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="53dp"
                android:layout_marginBottom="12dp"
                android:text="mph"
                android:textColor="#FDFAFA"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="127dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="- -"
                android:textColor="#F6F1F1"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/sysresp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:outlineAmbientShadowColor="#39FF4D"
            android:text="System Response"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="181dp">


            <TextView
                android:id="@+id/returnedText"
                android:layout_width="301dp"
                android:layout_height="67dp"
                android:layout_marginStart="56dp"
                android:layout_marginBottom="96dp"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="center"
                android:textColor="#F6F6F6"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            app:menu="@menu/bottom_nav_menu" />

    </LinearLayout>

</LinearLayout>